--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,58 +1,36 @@
-name: Rebuild
+name: Deploy
 
 on:
-  push: {branches: [main]}
-  # Workflow runs every 2 hours
-  schedule: [{cron: "0 */2 * * *"}]
   workflow_dispatch: {}
-
-permissions:
-  contents: read 
-  pages: write 
-  id-token: write
+  push:
+    branches: [main]
+  schedule:
+    - cron: "15 10 * * *"
 
 jobs:
-  rebuild-project:
+  deploy:
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      deployments: write
+      id-token: write
+      packages: read
     steps:
-
-    - name: checkout repo content
-      uses: actions/checkout@v4 
-      
-    - name: setup python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
-    
-    - name: install python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas
-  
-    - name: setup R
-      uses: r-lib/actions/setup-r@v2
-    
-    - name: install R packages
-      uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        packages: |
-          any::readr 
-          any::dplyr
-
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'yarn'
-    - run: yarn --frozen-lockfile
-    
-    - run: yarn build
-    
-    - uses: actions/configure-pages@v3
-    - uses: actions/upload-pages-artifact@v1
-      with:
-        path: dist
-
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'yarn'
+      - run: yarn --frozen-lockfile
+      - id: date
+        run: echo "date=$(TZ=America/Los_Angeles date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+      - id: cache-data
+        uses: actions/cache@v4
+        with:
+          path: docs/.observablehq/cache
+          key: data-${{ hashFiles('docs/data/*') }}-${{ steps.date.outputs.date }}
+      - run: yarn build
+      - run: yarn docs:build
+      - run: yarn docs:deploy
+        env:
+          OBSERVABLE_TOKEN: ${{ secrets.OBSERVABLE_API_TOKEN }}
