--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@observablehq/framework": "^1.13.2",
+    "bpg-glaho-web": "^1.0.0",
+    "bpg-glaho-web-caps": "^1.0.0",
+    "bpg-rioni-arial": "^1.0.0",
+    "css-loader": "^7.1.2",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
-    "r-integration": "^2.4.0"
+    "file-loader": "^6.2.0",
+    "r-integration": "^2.4.0",
+    "style-loader": "^4.0.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
