--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bpg-glaho-web-caps": "^1.0.0",
     "bpg-rioni-arial": "^1.0.0",
     "css-loader": "^7.1.2",
+    "d3-color-legend": "^1.4.2",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "file-loader": "^6.2.0",
