add script source with quotation marks

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -41,10 +41,9 @@ jobs:
           any::tidyverse
           any::openxlsx
           any::googlesheets4
-      - name: Run R script
-        run: |
-          Rscript src/data/download_data.R
-    
+      - name: Import data
+        run: Rscript -e 'src/data/download_data.R'
+        
     - uses: actions/setup-node@v4
       with:
         node-version: 20
