--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,10 +1,11 @@
 name: Rebuild
 
 on:
-  push: {branches: [main]}
-  # Workflow runs daily at midnight UTC
-  schedule: [{cron: "0 0 * * *"}]
-  workflow_dispatch: {}
+  push:
+    branches: [main]
+  schedule:
+    - cron: "0 0 * * *" # daily at midnight UTC
+  workflow_dispatch:
 
 permissions:
   contents: read 
@@ -16,48 +17,55 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      - name: Checkout repo content
+        uses: actions/checkout@v4 
 
-    - name: checkout repo content
-      uses: actions/checkout@v4 
-      
-    - name: setup python
-      uses: actions/setup-python@v5
-      with:
-        python-version: '3.9'
-    
-    - name: install python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas
-  
-    - name: setup R
-      uses: r-lib/actions/setup-r@v2
-    
-    - name: install R packages
-      uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        packages: |
-          any::readxl 
-          any::tidyverse
-          any::openxlsx
-          any::googlesheets4
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas
+
+      - name: Setup R
+        uses: r-lib/actions/setup-r@v2
+
+      - name: Install R packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages: |
+            any::readxl
+            any::tidyverse
+            any::openxlsx
+            any::googlesheets4
+
       - name: Import data
-        run: Rscript -e 'src/data/download_data.R'
-        
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache-dependency-path: package-lock.json
-        cache: 'yarn'
-    - run: yarn --frozen-lockfile
-    
-    - run: yarn build
-    
-    - uses: actions/configure-pages@v3
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        path: dist
+        run: Rscript src/data/download_data.R
 
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'yarn'
+          cache-dependency-path: package-lock.json
+
+      - name: Install Node dependencies
+        run: yarn --frozen-lockfile
+
+      - name: Build project
+        run: yarn build
+
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
