--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -44,3 +44,11 @@ jobs:
 
       - name: Import data
         run: Rscript src/data/download_data.R
+        
+      - name: Commit results
+        run: |
+          git config --local user.email "actions@github.com"
+          git config --local user.name "GitHub Actions"
+          git add survey_data.rds
+          git commit -m 'Data updated' || echo "No changes to commit"
+          git push origin || echo "No changes to commit"
