--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -49,6 +49,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add survey_data.rds
+          git add 'src/data/dashboard_data.xlsx'
           git commit -m 'Data updated' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
