--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,9 +8,10 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: read 
+  contents: write 
   pages: write 
   id-token: write
+  packages: write
 
 jobs:
   rebuild-project:
