--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,6 +21,16 @@ jobs:
       - name: Checkout repo content
         uses: actions/checkout@v4 
 
+      - name: setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+    
+    - name: install python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
+
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
 
@@ -43,3 +53,21 @@ jobs:
           git add src/data/dashboard_data.xlsx
           git diff-index --quiet HEAD || git commit -m "Update data from Excel file"
           git push
+          
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 20
+        cache-dependency-path: package-lock.json
+        cache: 'yarn'
+    - run: yarn --frozen-lockfile
+    
+    - run: yarn build
+    
+    - uses: actions/configure-pages@v3
+    - uses: actions/upload-pages-artifact@v3
+      with:
+        path: dist
+
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v4
