--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -8,28 +8,28 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write 
-  pages: write 
+  contents: write
+  pages: write
   id-token: write
   packages: write
 
 jobs:
   rebuild-project:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repo content
-        uses: actions/checkout@v4 
+        uses: actions/checkout@v4
 
-      - name: setup python
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-    
-    - name: install python dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas
 
       - name: Setup R
         uses: r-lib/actions/setup-r@v2
@@ -42,10 +42,11 @@ jobs:
             any::tidyverse
             any::openxlsx
             any::googlesheets4
+            any::httr
 
       - name: Import data
         run: Rscript src/data/download_data.R
-        
+
       - name: Commit and push downloaded data
         run: |
           git config user.name "github-actions[bot]"
@@ -53,21 +54,28 @@ jobs:
           git add src/data/dashboard_data.xlsx
           git diff-index --quiet HEAD || git commit -m "Update data from Excel file"
           git push
-          
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache-dependency-path: package-lock.json
-        cache: 'yarn'
-    - run: yarn --frozen-lockfile
-    
-    - run: yarn build
-    
-    - uses: actions/configure-pages@v3
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        path: dist
 
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'yarn'
+          cache-dependency-path: package-lock.json
+
+      - name: Install Node dependencies
+        run: yarn --frozen-lockfile
+
+      - name: Build project
+        run: yarn build
+
+      - name: Configure GitHub Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: dist
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
